# ETL

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  smtp_debugging_checklist.py  test_smtp_connection.py  verify_smtp_config.py
building_block/: pyproject.toml
building_block/src/building_block/core/base/: base_model.py  base_sql_repository.py
building_block/src/building_block/core/domain/: api_file.py  file_model.py  google_drive_file_model.py  hs_raw_data_model.py
building_block/src/building_block/infrastructure/mongo/: __init__.py  base_mongo_repository.py  client.py
building_block/src/building_block/infrastructure/postgres/: base_postgre_repository.py
building_block/src/building_block/shared/enum/: __init__.py  file_download_status.py  file_source.py
building_block/src/building_block/shared/scripts/: __init__.py  bootstrap_google_drive.py
building_block/src/building_block/shared/services/: google_drive_service.py
building_block/src/building_block/shared/services/filer_service/adapters/: google_drive_file_service.py
building_block/src/building_block/shared/setting/: __init__.py  base_setting.py  google_drive_setting.py  mongo_setting.py  postgres_setting.py
building_block/src/building_block/utils/: file_utils.py  logging.py  project_paths.py
building_block/src/building_block/utils/mappers/: google_drive_file_mapper.py
dags/: data_ingest_dag.py  send_email_dag.py  test_smtp_email.py
dags/common/: __init__.py  google_drive_sensor.py  notifications.py
dags/config/: __init__.py  airflow_services.py
modules/data_access/: __init__.py  main.py  pyproject.toml
modules/data_access/adapter/: __init__.py  postgres_hs_raw_data_repository_adapter.py
modules/data_access/adapter/ports/: __init__.py
modules/data_access/application/base/: base_handler.py
modules/data_access/application/request/: __init__.py
modules/data_access/application/request/commands/: __init__.py  base_command.py
modules/data_access/application/request/queries/: __init__.py  base_query.py
modules/data_access/mediator/: __init__.py  mediator.py  mediatory_registry.py
modules/data_access/src/data_access/: __init__.py  main.py
modules/data_access/src/data_access/mediator/: mediator.py  mediatory_registry.py
modules/data_loader/: README.md  main.py  pyproject.toml
modules/data_loader/src/data_loader/: entrypoints.py
modules/data_loader/src/data_loader/applications/models/: __init__.py  download_response.py
modules/data_loader/src/data_loader/applications/services/downloaders/: __init__.py
modules/data_loader/src/data_loader/applications/services/downloaders/adapters/: file_dispatcher.py  google_drive_downloader.py
modules/data_loader/src/data_loader/applications/services/downloaders/ports/: downloader.py
modules/data_processing/: pyproject.toml
modules/data_processing/src/data_processing/: entrypoints.py
modules/data_processing/src/data_processing/application/: __init__.py  pipeline_factory.py
modules/data_processing/src/data_processing/application/pipelines/: pipeline_factory.py
modules/data_processing/src/data_processing/application/pipelines/pipeline_handlers/hs_code_handlers/enrichment/: __init__.py  buyer_cleaning.py
modules/data_processing/src/data_processing/application/pipelines/pipeline_handlers/hs_code_handlers/persistence/: __init__.py
modules/data_processing/src/data_processing/application/pipelines/pipeline_handlers/hs_code_handlers/transformation/: __init__.py  columns.py
modules/data_processing/src/data_processing/application/pipelines/pipeline_handlers/hs_code_handlers/validation/: __init__.py  validator.py
modules/data_processing/src/data_processing/domain/: __init__.py
modules/data_processing/src/data_processing/domain/models/: __init__.py  base_handler.py  processed_data.py  raw_data.py  schema.py
modules/data_processing/src/data_processing/domain/ports/: handler.py
modules/data_processing/src/data_processing/services/: __init__.py
modules/data_processing/src/data_processing/services/adapters/: __init__.py  audit_processing_result.py  hs_raw_data_mediator_adapter.py
modules/data_processing/src/data_processing/services/ports/: data_access_ports.py
modules/etl_pipeline/: pyproject.toml
modules/etl_pipeline/src/: hs_code_daily.py
scripts/: bootstrap_google_drive.py  entrypoint-init.sh  first-run.sh  init-dbs.sql  init-mongo.js  init_data_loader.sh  move-to-src-layout.sh  quickstart.sh  start.sh
src/building_block/src/building_block/utils/: file_utils.py  logging.py  project_paths.py
src/modules/data_access/: MEDIATOR_CQRS_IMPLEMENTATION.md  README.md  pyproject.toml
src/modules/data_access/src/data_access/adapter/ports/: hs_raw_data_repository_port.py
src/modules/data_access/src/data_access/application/base/: base_request.py
src/modules/data_access/src/data_access/application/request/commands/: base_command.py
src/modules/data_access/src/data_access/application/request/commands/audit_file_download/: __init__.py  audit_file_download_command_response.py
src/modules/data_access/src/data_access/application/request/commands/audit_file_download/handler/: api_download_handler.py
src/modules/data_access/src/data_access/application/request/commands/audit_processing_result/: audit_processing_result_command.py
src/modules/data_access/src/data_access/application/request/commands/save_hs_raw_data/: __init__.py  save_hs_raw_data_response.py
src/modules/data_access/src/data_access/mediator/: __init__.py  mediator.py  mediatory_registry.py
src/modules/data_loader/: README.md
src/modules/data_loader/src/data_loader/: __init__.py
src/modules/data_processing/src/data_processing/: __init__.py
src/modules/etl_pipeline/src/: hs_code_daily.py
test/unit_test/: test_base_mongo_repository.py  test_base_postgres_repository.py  test_create_file_command.py  test_data_loader_audit.py  test_data_loader_import.py  test_google_drive_bootstrap.py  test_google_drive_downloader_return_model.py  test_google_drive_service.py  test_mediator_cqrs.py  test_save_hs_raw_data_command.py
(+45 files in other folders)
