[project]
name = "etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "a2wsgi==1.10.10",
    "aiosmtplib==5.1.0",
    "aiosqlite==0.21.0",
    "alembic==1.18.4",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "apache-airflow==3.2.1",
    "apache-airflow-core==3.2.1",
    "apache-airflow-providers-common-compat==1.15.0",
    "apache-airflow-providers-common-io==1.7.2",
    "apache-airflow-providers-common-sql==2.0.0",
    "apache-airflow-providers-smtp==3.0.1",
    "apache-airflow-providers-standard==1.13.1",
    "apache-airflow-task-sdk==1.2.1",
    "argcomplete==3.6.3",
    "asgiref==3.11.1",
    "asyncpg==0.31.0",
    "attrs==26.1.0",
    "babel==2.18.0",
    "boto3==1.43.16",
    "botocore==1.43.16",
    "cadwyn==6.2.2",
    "certifi==2026.5.20",
    "cffi==2.0.0 ; platform_python_implementation != 'PyPy'",
    "charset-normalizer==3.4.7",
    "click==8.4.1",
    "colorama==0.4.6 ; sys_platform == 'win32'",
    "colorlog==6.10.1",
    "cron-descriptor==2.0.8",
    "croniter==6.2.2",
    "cryptography==48.0.0",
    "deprecated==1.3.1",
    "dill==0.4.1",
    "distro==1.9.0",
    "dnspython==2.8.0",
    "email-validator==2.3.0",
    "et-xmlfile==2.0.0",
    "fastapi==0.136.3",
    "fastapi-cli==0.0.24",
    "fsspec==2026.4.0",
    "google-api-core==2.30.3",
    "google-api-python-client==2.196.0",
    "google-auth==2.53.0",
    "google-auth-httplib2==0.4.0",
    "google-auth-oauthlib==1.4.0",
    "googleapis-common-protos==1.75.0",
    "greenback==1.3.0",
    "greenlet==3.5.1",
    "grpcio==1.80.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httplib2==0.31.2",
    "httptools==0.8.0",
    "httpx==0.28.1",
    "idna==3.16",
    "importlib-metadata==9.0.0",
    "iniconfig==2.3.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "jiter==0.15.0",
    "jmespath==1.1.0",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "lazy-object-proxy==1.12.0",
    "libcst==1.8.6",
    "linkify-it-py==2.1.0",
    "lockfile==0.12.2",
    "mako==1.3.12",
    "markdown-it-py==4.2.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "methodtools==0.4.7",
    "more-itertools==11.1.0",
    "msgspec==0.21.1",
    "natsort==8.4.0",
    "numpy==2.4.6",
    "oauthlib==3.3.1",
    "openai==2.38.0",
    "openpyxl==3.1.5",
    "opentelemetry-api==1.42.1",
    "opentelemetry-exporter-otlp==1.42.1",
    "opentelemetry-exporter-otlp-proto-common==1.42.1",
    "opentelemetry-exporter-otlp-proto-grpc==1.42.1",
    "opentelemetry-exporter-otlp-proto-http==1.42.1",
    "opentelemetry-proto==1.42.1",
    "opentelemetry-sdk==1.42.1",
    "opentelemetry-semantic-conventions==0.63b1",
    "outcome==1.3.0.post0",
    "packaging==26.2",
    "pandas==3.0.3",
    "pathlib-abc==0.5.2",
    "pathspec==1.1.1",
    "pendulum==3.2.0",
    "pluggy==1.6.0",
    "proto-plus==1.28.0",
    "protobuf==6.33.6",
    "psutil==7.2.2",
    "psycopg2-binary==2.9.12",
    "pyasn1==0.6.3",
    "pyasn1-modules==0.4.2",
    "pycparser==3.0 ; implementation_name != 'PyPy' and platform_python_implementation != 'PyPy'",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "pydantic-extra-types==2.11.1",
    "pydantic-settings==2.14.1",
    "pygments==2.20.0",
    "pygtrie==2.5.0",
    "pyjwt==2.13.0",
    "pymongo==4.17.0",
    "pyparsing==3.3.2",
    "pytest==9.0.3",
    "python-daemon==3.1.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.29",
    "python-slugify==8.0.4",
    "pyyaml==6.0.3",
    "pyyaml-ft==8.0.0 ; python_full_version == '3.13.*'",
    "referencing==0.37.0",
    "requests==2.34.2",
    "requests-oauthlib==2.0.0",
    "rich==15.0.0",
    "rich-argparse==1.8.0",
    "rich-toolkit==0.19.10",
    "rpds-py==0.30.0",
    "s3transfer==0.17.1",
    "setproctitle==1.3.7",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.50",
    "sqlparse==0.5.5",
    "starlette==0.52.1",
    "structlog==25.5.0",
    "svcs==25.1.0",
    "tabulate==0.10.0",
    "tenacity==9.1.4",
    "termcolor==3.3.0",
    "text-unidecode==1.3",
    "tqdm==4.67.3",
    "typer==0.26.2",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2026.2",
    "uc-micro-py==2.0.0",
    "universal-pathlib==0.3.10",
    "uritemplate==4.2.0",
    "urllib3==2.7.0",
    "uuid6==2025.0.1",
    "uvicorn==0.48.0",
    "uvloop==0.22.1 ; platform_python_implementation != 'PyPy' and sys_platform != 'cygwin' and sys_platform != 'win32'",
    "watchfiles==1.2.0",
    "websockets==16.0",
    "wirerope==1.0.0",
    "wrapt==2.2.1",
    "zipp==4.1.0",
]

[tool.uv.workspace]
members = [
    "building_block",
    "modules/data_access",
]