[project]
name = "building-block"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mathettatca", email = "khoinm0603@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
